--- a/RecipeWebsite/src/index.html
+++ b/RecipeWebsite/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <link rel="stylesheet" href="node_modules/bootswatch/dist/cerulean/bootstrap.min.css">
 <body>
   <app-root></app-root>
 </body>
